# ComfyUI_ChatGLM_API

./: ChatGLM4_API_Node  ChatGLM4_API_Node.py  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
workflow/: img2txt.json  txt2txt.json
