[project]
name = "comfyui_chatglm_api"
description = "You can call Chatglm's API in comfyUI to translate and describe pictures, and the API similar to OpenAI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["requests", "transformers==4.41.1"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_ChatGLM_API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ChatGLM_API"
Icon = ""
